tests/baselines/reference/structConstructorFunctionTypeIsAssignableToBaseType2.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structConstructorFunctionTypeIsAssignableToBaseType2.ts(30,16): error TS20020: Cannot have return expression in struct constructor.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structConstructorFunctionTypeIsAssignableToBaseType2.ts (1 errors) ====
    // the constructor function itself does not need to be a subtype of the base type constructor function
    
    struct Base {
        static foo: {
            bar: Object;
        }
        constructor(x: Object) {
        }
    }
    
    struct Derived extends Base {
        // ok
        static foo: {
            bar: number;
        }
    
        constructor(x: number) { // ok
            super(x);
        }
    }
    
    struct Derived2 extends Base {   
        static foo: {
            bar: number;
        }
    
        // ok, not enforcing assignability relation on this
        constructor(x: any) {
            super(x);
            return 1; // return expression not allowed
                   ~
!!! error TS20020: Cannot have return expression in struct constructor.
        }
    }